--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div class="w-full h-full relative">
         <video poster="img/poster.jpg" autoplay muted loop width="100%" class="rounded-xl w-full h-full object-cover">
           <source src="7020334_Person_Screen_3840x2160.mp4" type="video/mp4" />
+          <track src="" kind="captions" srclang="en" label="English" />
           Your browser does not support the video tag.
         </video>
         <div
@@ -99,7 +100,7 @@
     </div>
   </div>
   <div class="flex justify-center ">
-    <a href="#scroll" class="relative -top-10 block animate-bounce">
+    <a aria-label="scroll for show work" href="#scroll" class="relative -top-10 block animate-bounce">
       <svg fill="" class="fill-lime" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" width="40px" height="40px" viewBox="0 0 42.624 42.625"
         xml:space="preserve">
