--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-[#ffff0] ">
+<body class="bg-[#fffff0] ">
   <div class="grid grid-flow-row-dense grid-cols-12 grid-rows-12 w-full h-screen gap-4">
     <div class="col-start-2 row-start-1 row-end-2 col-end-12 md:text-end text-center">
       <div class="flex justify-between items-center flex-row h-full">
@@ -50,6 +50,12 @@
 
     <div class="rounded-xl row-start-2 row-end-12 col-start-2 col-end-12 overflow-hidden">
       <div class="w-full h-full relative">
+
+
+        <div class="absolute top-5 left-5 ">
+          <img src="img/SVG/omprakashrahangdale_logo.svg" alt="Omprakash Rahangdale Logo"
+            class="w-50 h-20 md:w-60 md:h-24 p-2 md:p-3 z-10" />
+        </div>
         <video poster="img/poster.jpg" autoplay muted loop width="100%" class="rounded-xl w-full h-full object-cover">
           <source src="7020334_Person_Screen_3840x2160.mp4" type="video/mp4" />
           <track src="" kind="captions" srclang="en" label="English" />
@@ -57,11 +63,11 @@
         </video>
         <div
           class="absolute top-0 left-0 w-full h-full flex flex-col items-start pl-2 md:items-center justify-end pb-12">
-          <h1 class="text-white text-5xl heading mb-2 md:mb-5">Hello,</h1>
+          <h1 class="text-white text-4xl heading mb-2 md:mb-5">Hello,</h1>
 
           <div class="flex flex-col md:flex-row md:items-center items-start md:justify-center gap-0 md:gap-5">
             <div>
-              <h2 class="text-white text-xl md:text-3xl font-lite">
+              <h2 class="text-white text-xl md:text-xl font-lite">
                 I'm Omprakash
               </h2>
             </div>
