--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="bg-[#fffff0] ">
-  <div class="grid grid-flow-row-dense grid-cols-12 grid-rows-12 w-full h-screen gap-4">
+  <div class="grid grid-flow-row-dense grid-cols-12 grid-rows-12  h-screen gap-4">
     <div class="col-start-2 row-start-1 row-end-2 col-end-12 md:text-end text-center">
       <div class="flex justify-between items-center flex-row h-full">
         <p class="text-md md:text-xl text-center md:text-start font-light text-slate-800 md:w-auto w-full">
@@ -170,15 +170,6 @@
         <div class="flex gap-0  md:flex-row justify-between w-full flex-wrap md:flex-nowrap md:gap-3 w-full">
           <div class="  w-1/2">
             <div class="py-5 shodow-sm">
-              <a aria-label="cssbattel" href="https://cssbattle.dev/player/omi" class="text-center w-full block"
-                target="_blank" aria-label="Visit Omprakash's CSS Battle profile">
-                <img src="img/cssbattel.svg" alt="CSS Battle Logo" width="90%" height="20px"
-                  class="md:mx-auto pl-5 md:pl-0" lazy-load="true" />
-              </a>
-            </div>
-          </div>
-          <div class="  w-1/2">
-            <div class="py-5 shodow-sm">
               <a aria-label="behance" href="https://www.behance.net/omruiux" target="_blank" class="w-full"
                 aria-label="Visit Omprakash's Behance profile">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 152.5 28.2"
@@ -188,12 +179,22 @@
                   <path
                     d="M13.1 0c1.3 0 2.5.1 3.6.4 1.1.2 2 .6 2.8 1.1.8.5 1.4 1.2 1.8 2.1.4.9.6 2 .6 3.2 0 1.4-.3 2.6-1 3.5-.6.9-1.6 1.7-2.8 2.3 1.7.5 3 1.4 3.8 2.6.8 1.2 1.3 2.7 1.3 4.4 0 1.4-.3 2.6-.8 3.6s-1.3 1.9-2.2 2.5c-.9.6-2 1.1-3.2 1.4-1.2.3-2.4.5-3.6.5H0V0h13.1zm-.8 11.2c1.1 0 2-.3 2.7-.8.7-.5 1-1.4 1-2.5 0-.6-.1-1.2-.3-1.6-.2-.4-.5-.7-.9-1-.4-.2-.8-.4-1.3-.5-.5-.1-1-.1-1.6-.1H6.1v6.5h6.2zm.3 11.8c.6 0 1.2-.1 1.7-.2s1-.3 1.4-.6c.4-.3.7-.6 1-1.1.2-.5.4-1.1.4-1.8 0-1.4-.4-2.4-1.2-3.1-.8-.6-1.9-.9-3.2-.9H6.1V23h6.5zm19.3-.1c.8.8 2 1.2 3.6 1.2 1.1 0 2.1-.3 2.9-.8.8-.6 1.3-1.2 1.5-1.8h4.9c-.8 2.4-2 4.1-3.6 5.2-1.6 1-3.5 1.6-5.8 1.6-1.6 0-3-.3-4.3-.8-1.3-.5-2.3-1.2-3.2-2.1-.9-.9-1.6-2-2.1-3.2-.5-1.3-.7-2.6-.7-4.1 0-1.6.2-3 .7-4.3.5-1.3 1.1-2.5 2-3.5.9-1 2-1.7 3.2-2.3 1.3-.5 2.6-.8 4.3-.8 1.7 0 3.2.3 4.5 1 1.3.7 2.3 1.5 3.1 2.7.8 1.1 1.4 2.4 1.8 3.8.2 1.4.3 2.8.2 4.4H30.5c0 1.6.6 3.1 1.4 3.9zm6.3-10.5c-.7-.7-1.8-1.1-3.1-1.1-.9 0-1.6.2-2.2.5-.6.3-1 .7-1.4 1.1-.4.4-.6.9-.7 1.4-.1.5-.2.9-.2 1.3h9c-.2-1.5-.7-2.5-1.4-3.2zM52.8 0v10.4h.1c.7-1.2 1.6-2 2.7-2.5s2.1-.8 3.2-.8c1.5 0 2.7.2 3.6.6.9.4 1.7 1 2.2 1.7.5.7.9 1.6 1.1 2.6.2 1 .3 2.1.3 3.4v12.3h-5.5V16.4c0-1.7-.3-2.9-.8-3.7-.5-.8-1.4-1.2-2.7-1.2-1.5 0-2.6.5-3.2 1.3-.7.9-1 2.4-1 4.4v10.5h-5.5V0h5.5zM70 10.6c.6-.9 1.3-1.5 2.2-2.1.9-.5 1.9-.9 3-1.1 1.1-.2 2.2-.3 3.3-.3 1 0 2 .1 3.1.2 1 .1 2 .4 2.8.8.9.4 1.5 1 2.1 1.7.5.7.8 1.7.8 2.9v10.5c0 .9.1 1.8.2 2.6s.4 1.5.7 1.9h-5.6c-.2-.2-.3-.6-.4-.9-.1-.3-.1-.7-.1-1-.9.9-1.9 1.5-3.1 1.9-1.2.4-2.4.5-3.6.5-1 0-1.8-.1-2.7-.4-.8-.2-1.5-.6-2.2-1.1-.6-.5-1.1-1.1-1.5-1.9-.3-.8-.5-1.6-.5-2.7s.2-2.1.6-2.8c.4-.7.9-1.3 1.5-1.8.6-.4 1.4-.8 2.2-1 .8-.2 1.6-.4 2.5-.5l2.4-.3c.8-.1 1.5-.2 2.1-.3.6-.2 1.1-.4 1.5-.7.4-.3.5-.7.5-1.3 0-.6-.1-1.1-.3-1.4-.2-.3-.5-.6-.8-.8-.3-.2-.7-.3-1.1-.4-.4-.1-.9-.1-1.4-.1-1.1 0-1.9.2-2.5.7-.6.5-1 1.3-1.1 2.3h-5.5c0-1.2.4-2.3.9-3.1zm10.9 7.8c-.3.1-.7.2-1.1.3-.4.1-.8.1-1.3.2-.4.1-.9.1-1.3.2l-1.2.3c-.4.1-.8.3-1 .5-.3.2-.5.5-.7.8-.3.4-.3.8-.3 1.3s.1.9.3 1.2c.2.3.4.6.7.8.3.2.7.3 1.1.4.4.1.8.1 1.3.1 1.1 0 1.9-.2 2.5-.5.6-.4 1-.8 1.3-1.3.3-.5.5-1 .5-1.5.1-.5.1-.9.1-1.2v-2.1c-.3.2-.6.4-.9.5zM95.6 7.6v2.8h.1c.7-1.2 1.6-2 2.7-2.5s2.3-.8 3.4-.8c1.5 0 2.7.2 3.6.6 1 .4 1.7 1 2.2 1.7.5.7.9 1.6 1.2 2.6.2 1 .3 2.1.3 3.4v12.3h-5.5V16.4c0-1.7-.3-2.9-.8-3.7-.5-.8-1.4-1.3-2.8-1.3-1.5 0-2.6.6-3.3 1.5-.7.9-1 2.4-1 4.4v10.5h-5.5V7.6h5.4zm25.8 3.6c-.9 0-1.6.2-2.2.6-.6.4-1.1.9-1.5 1.6-.4.6-.6 1.3-.8 2.1-.2.8-.2 1.5-.2 2.3 0 .7.1 1.5.2 2.2.2.8.4 1.4.8 2 .4.6.8 1.1 1.4 1.5.6.4 1.3.6 2.2.6 1.3 0 2.3-.4 3.1-1.1.7-.7 1.2-1.7 1.3-3h5.3c-.4 2.7-1.4 4.7-3.1 6.1-1.7 1.4-3.9 2.1-6.6 2.1-1.5 0-2.9-.3-4.1-.8-1.3-.5-2.3-1.2-3.2-2.1-.9-.9-1.6-2-2.1-3.2-.5-1.3-.7-2.6-.7-4.1 0-1.6.2-3 .7-4.3.5-1.3 1.1-2.5 2-3.5.9-1 2-1.7 3.2-2.3 1.3-.5 2.7-.8 4.3-.8 1.2 0 2.3.2 3.4.5s2.1.8 2.9 1.4c.9.6 1.6 1.4 2.1 2.4.5.9.8 2.1.9 3.4h-5.4c-.2-2.4-1.5-3.6-3.9-3.6zm-92-9.3h11.2v2.7H29.4zm109.9 21c.8.8 2.1 1.2 3.6 1.2 1.1 0 2.1-.3 2.9-.8.8-.6 1.3-1.2 1.5-1.8h4.8c-.8 2.4-2 4.1-3.6 5.2-1.6 1-3.5 1.6-5.8 1.6-1.6 0-3-.3-4.3-.8-1.3-.5-2.3-1.2-3.2-2.2-.9-.9-1.6-2-2-3.3-.5-1.3-.7-2.7-.7-4.3 0-1.5.2-2.9.7-4.2.5-1.3 1.2-2.4 2.1-3.4.9-.9 2-1.7 3.2-2.2 1.3-.5 2.7-.8 4.2-.8 1.7 0 3.2.3 4.4 1 1.3.7 2.3 1.5 3.1 2.7.8 1.1 1.4 2.4 1.8 3.8.4 1.4.5 2.9.4 4.5h-14.5c0 1.5.6 3 1.4 3.8zm6.4-10.5c-.7-.7-1.8-1.1-3.1-1.1-.9 0-1.6.2-2.2.5-.6.3-1.1.7-1.4 1.1-.3.4-.6.9-.7 1.4-.1.5-.2.9-.2 1.3h9c-.3-1.5-.8-2.5-1.4-3.2z"
                     fill="#fff"></path>
-                  <!--]-->
+
                   </g>
                 </svg>
               </a>
             </div>
           </div>
+          <div class="  w-1/2">
+            <div class="py-5 shodow-sm">
+              <a aria-label="cssbattel" href="https://cssbattle.dev/player/omi" class="text-center w-full block"
+                target="_blank" aria-label="Visit Omprakash's CSS Battle profile">
+                <img src="img/cssbattel.svg" alt="CSS Battle Logo" width="90%" height="20px"
+                  class="md:mx-auto pl-5 md:pl-0" lazy-load="true" />
+              </a>
+            </div>
+          </div>
+
           <div class=" w-1/2">
             <div class="py-5 shodow-sm">
               <a aria-label="dribbble" href="https://www.dribbble.com/omiir" target="_blank"
@@ -390,35 +391,50 @@
           <span>Work
 
           </span>
-          <span class="text-lime font-semi-bold text-5xl md:text-6xl">
-            UI and Graphics
-          </span>
+
         </h3>
-        <div>
-          <div class="flex justify-between items-center md:gap-4 gap-0  flex-wrap md:flex-nowrap">
-            <div class="w-1/2 md:w-2/5 md:p-0 p-1">
-              <img src="img/graphics/Chanel.png" class="w-full rounded-md" alt="Chanel graphic design by Omprakash"
-                width="249px" height="311px" loading="lazy">
-            </div>
-            <div class="w-1/2 md:w-2/5 md:p-0 p-1">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-4">
+          <a href="graphics.html" aria-label="graphics design" target="_blank"
+            class="text-lime font-semi-bold group text-4xl md:text-2xl border-b-2 border-lime flex-1 hover:flex-2 transition-all duration-300 cursor-pointer relative">
+            Graphics
+            <span
+              class="absolute -top-1 group-hover:right-1 opacity-0 group-hover:opacity-100 transition-all  right-60 text-xs text-lime px-2 rounded-full duration-300  ">
+              <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 15L16 12M16 12L13 9M16 12H8M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                  stroke="lime" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
 
-              <img src="img/graphics/Chanel-coco.png" class="w-full rounded-md"
-                alt="Chanel Coco graphic design by Omprakash" width="249px" height="311px" loading="lazy">
-            </div>
-            <div class="w-1/2 md:w-2/5 md:p-0 p-1">
+            </span>
+          </a>
+          <a href="ui.html" aria-label="ui design" target="_blank"
+            class="text-lime font-semi-bold group text-4xl md:text-2xl border-b-2 border-lime  flex-1 hover:flex-2 transition-all duration-300 cursor-pointer relative">
 
-              <img src="img/graphics/Chanel-coco-1.png" class="w-full rounded-md"
-                alt="Chanel Coco alternate graphic design by Omprakash" width="249px" height="311px" loading="lazy">
-            </div>
-            <div class="w-1/2 md:w-2/5 md:p-0 p-1">
+            UI <span
+              class="absolute -top-1 group-hover:right-1 opacity-0 group-hover:opacity-100 transition-all  right-60 text-xs text-lime px-2 rounded-full duration-300  ">
+              <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 15L16 12M16 12L13 9M16 12H8M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                  stroke="lime" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
 
-              <img src="img/graphics/Chanel-1.png" class="w-full rounded-md"
-                alt="Chanel alternate graphic design by Omprakash" width="249px" height="311px" loading="lazy">
-            </div>
-          </div>
+            </span>
+          </a>
+
+          <a href="web.html" aria-label="web development" target="_blank"
+            class="text-lime font-semi-bold  group  text-4xl md:text-2xl border-b-2 border-lime flex-1 hover:flex-2 transition-all duration-300 cursor-pointer relative">
+            Web development
+            <span
+              class="absolute -top-1 group-hover:right-1 opacity-0 group-hover:opacity-100 transition-all  right-60 text-xs text-lime px-2 rounded-full duration-300  ">
+              <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 15L16 12M16 12L13 9M16 12H8M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                  stroke="lime" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+
+            </span>
+          </a>
         </div>
-
-
       </div>
 
 
@@ -428,7 +444,7 @@
 
   </div>
   <div>
-    <div class="text-white text-center py-5 mt-2">
+    <div class=" text-white text-center py-5 mt-2">
       <p class=" text-xs md:text-sm text-black">
         Designed and Developed by Omprakash Rahangdale
       </p>
