--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         width: 100%;
       }
       @theme {
-          --color-lime: #03ffb7;
+        --color-lime: #96ff00;
         --color-clifford: #da373d;
       }
     </style>
