--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 
     <div
-      class="rounded-xl bg-slate-900  row-start-10 row-end-12 md:row-start-6  row-end-10   col-start-2 col-end-12   md:text-start text-center">
+      class="rounded-xl bg-slate-900  row-start-10 row-end-12 md:row-start-6  row-end-10   col-start-2 col-end-12 md:col-end-6  md:text-start text-center">
 
       <div class="rounded p-5 md:p-12 py-14">
         <h3 class="text-xl text-start md:text-3xl capitalize text-white flex flex-col mb-8">
@@ -468,7 +468,7 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
 
     </div>
     <div
-      class="rounded-xl bg-slate-900 p-4 row-start-12 row-end-12 md:row-start-6  row-end-10   col-start-2 col-end-12   md:text-start text-center">
+      class="rounded-xl bg-slate-900 p-4 row-start-12 row-end-12 md:row-start-6  row-end-10 col-start-2   md:col-start-6 col-end-12 md:col-end-12   md:text-start text-center">
 
       <div class="flex flex-nowrap flex-row h-auto md:h-50 gap-5 justify-evenly
  relative ">
