--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
       }
        
     </style>
+  <p>Total Visitors: <span id="visitor-count">Loading...</span></p>
 
   <script src="script.js"></script>
 </body>
