--- a/index.html
+++ b/index.html
@@ -533,8 +533,8 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
       }
        
     </style>
-  <p>Total Visitors: <span id="visitor-count">Loading...</span></p>
-
+  <a href='http://www.freevisitorcounters.com'>http://freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=3573fddbd4dd9bc94d509391af56cc7c896f0a34'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1372006/t/13"></script>
   <script src="script.js"></script>
 </body>
 
