--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
             </span>
           </a> -->
-          <a href="ui.html" aria-label="ui design" target="_blank"
+          <a href="https://www.intellishare.ai" aria-label="ui design" target="_blank"
             class="text-lime w-full  text-start font-semi-bold group text-xl md:text-2xl border-b-2 border-lime  flex-1 hover:flex-2 transition-all duration-300 cursor-pointer relative">
             Intellishare.ai
             <span
@@ -540,3 +540,4 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
 </body>
 
 </html>
+
