--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="keywords"
     content="HTML,CSS,JavaScript,Portfolio,omruiux, Webflow,Daisy UI,Bulma,photoshop,Adobexd, xd,Tailwindcss, UI designer,html and css Developer, RWD, Responsive web design, UI">
   <meta name="author" content="Omprakash Rahangdale">
+   <meta name="p:domain_verify" content="0b010a799190bc6306da6ef349bd4c66"/>
   <!--font-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -540,4 +541,5 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
 </body>
 
 </html>
+
 
