--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
   <div>
     <div class=" text-white text-center py-5 mt-2">
       <p class=" text-xs md:text-sm text-black">
-        Designed and Developed by Omprakash Rahangdale
+       &copy;2025 | Designed and Developed by Omprakash Rahangdale
       </p>
     </div>
   </div>
@@ -538,6 +538,7 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
 </body>
 
 </html>
+
 
 
 
