--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             class="w-50 h-20 md:w-60 md:h-24 p-2 md:p-3 z-10" />
         </div>
 
-		  <iframe width="560" height="315"
+		  <iframe width="350"
+  height="197" class="absolute top-4 right-4"
   src="https://www.youtube.com/embed/MJBurVkM_l0"
   title="YouTube video player"
   frameborder="0"
@@ -547,6 +548,7 @@ https://www.mahalaxmidevelopers.com/" aria-label="ui mahalaxmidevelopers" target
 </body>
 
 </html>
+
 
 
 
